stack.yaml
Resources:
  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: MilestoneAutoScaling
      Cooldown: 120
      DesiredCapacity: 1
      LaunchConfigurationName: 
        Ref: "LaunchConfig"
      LoadBalancerNames:
        - Ref: "ElasticLoadBalancer"
      MaxSize: 2
      MinSize: 1
      VPCZoneIdentifier: 
      - subnet-0f9f987ccb7412144
      - subnet-929747de
      - subnet-09599b861df51d900

  LaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      KeyName: "CloudFormationKeyPair"
      ImageId: "ami-0be057a22c63962cb"
      SecurityGroups:
        - sg-868c63e6
      InstanceType: "t2.micro"
      BlockDeviceMappings: 
        - DeviceName: /dev/sda1
          Ebs: 
            VolumeSize: 8
            VolumeType: "gp2"

  ElasticLoadBalancer:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      AvailabilityZones:
        - "eu-west-2b"
      Listeners:
      - LoadBalancerPort: '80'
        InstancePort: '80'
        Protocol: HTTP
      HealthCheck:
        HealthyThreshold: '10'
        Interval: '10'
        Target: HTTP:80/
        Timeout: '5'
        UnhealthyThreshold: '2'

  AllowSSH:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access
      SecurityGroupIngress:
        IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0

  AllowHTTP:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access
      SecurityGroupIngress:
        IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0

  WebServerScaleUpPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName:
        Ref: "AutoScalingGroup"
      Cooldown: '60'
      ScalingAdjustment: '1'

  CPUAlarmHigh:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: Scale-up if CPU >70 for 6
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      Statistic: Average
      Period: '180'
      EvaluationPeriods: '2'
      Threshold: '70'
      AlarmActions:
      - !Ref 'WebServerScaleUpPolicy'
      ComparisonOperator: GreaterThanThreshold
      Dimensions:
      - Name: MilestoneAutoScaling
        Value:
          Ref: "AutoScalingGroup"
